--- a/animation.html
+++ b/animation.html
@@ -10,50 +10,34 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "animation.css"], "outOfDate":[]};
 </script>
   
-  <title>首頁</title>
+  <title>animation</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4167989958"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=206184375" id="pagesheet"/>
-   </head>
+  <link rel="stylesheet" type="text/css" href="css/animation.css?crc=4034559051" id="pagesheet"/>
+    <!--HTML Widget code-->
+  <style type="text/css">#u398.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
+ </head>
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu94"><!-- group -->
-    <div class="shadow rgba-background" id="u94"><!-- simple frame --></div>
-    <div class="clearfix" id="u119-4"><!-- content -->
-     <p>hello! welcom!</p>
-    </div>
+   <div class="grpelem" id="u382"><!-- simple frame --></div>
+   <div class="clip_frame grpelem" id="u403" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=-0.2924,M21=0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-62" data-mu-ie-matrix-dy="-118"><!-- image -->
+    <img class="block" id="u403_img" src="images/%e4%b8%89%e8%a6%96.png?crc=3971853114" data-hidpi-src="images/%e4%b8%89%e8%a6%96_2x.png?crc=4126830566" alt="" width="894" height="561"/>
    </div>
-   <div class="clearfix grpelem" id="ppu108"><!-- column -->
-    <div class="clearfix colelem" id="pu108"><!-- group -->
-     <div class="museBGSize clearfix grpelem" id="u108"><!-- group -->
-      <div class="rounded-corners clearfix grpelem" id="u122"><!-- group -->
-       <a class="nonblock nontext clearfix grpelem" id="u125-4" href="animation.html" target="_blank"><!-- content --><p>click!!</p></a>
-      </div>
-     </div>
-     <div class="clearfix grpelem" id="u128-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=0.2924,M21=-0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-86" data-mu-ie-matrix-dy="3"><!-- content -->
-      <p><span>awesome</span></p>
-     </div>
-    </div>
-    <a class="nonblock nontext museBGSize colelem" id="u586" href="https://youtu.be/DoHO0gu1xck" target="_blank"><!-- simple frame --></a>
-    <div class="clearfix colelem" id="pu385"><!-- group -->
-     <div class="clip_frame grpelem" id="u385"><!-- image -->
-      <img class="block" id="u385_img" src="images/%e4%b8%89%e8%a6%96.jpg?crc=95675551" data-hidpi-src="images/%e4%b8%89%e8%a6%96_2x.jpg?crc=3781428283" alt="" width="684" height="435"/>
-     </div>
-     <a class="nonblock nontext grpelem" id="u395" href="oh-my-god.html"><!-- simple frame --></a>
-    </div>
+   <div class="size_fixed grpelem" id="u398"><!-- custom html -->
+    
+<iframe class="actAsDiv" style="width:100%;height:100%;" src="//www.youtube.com/embed/DoHO0gu1xck?autoplay=0&loop=0&showinfo=0&theme=light&color=white&controls=0&modestbranding=0&start=102&fs=1&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
+
    </div>
-   <div class="verticalspacer" data-offset-top="2029" data-content-above-spacer="2028" data-content-below-spacer="125"></div>
-   <a class="anchor_item grpelem" id="hehe"></a>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%202.png?crc=426106178" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%202_2x.png?crc=4073447268" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%203.png?crc=124237393" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%203_2x.png?crc=441505100" alt=""/>
+   <div class="clearfix grpelem" id="u413-6"><!-- content -->
+    <p>&nbsp; and hope u like it!</p>
+    <p>/</p>
+   </div>
+   <a class="nonblock nontext clearfix grpelem" id="u589-4" href="index.html"><!-- content --><p>BACK</p></a>
+   <div class="verticalspacer" data-offset-top="1045" data-content-above-spacer="1045" data-content-below-spacer="62"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -66,14 +50,13 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u108').registerBackgroundPositionScrollEffect([{"speed":[0,0.1],"in":[-Infinity,0]},{"speed":[0,0.1],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
