--- a/oh-my-god.html
+++ b/oh-my-god.html
@@ -10,44 +10,42 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "oh-my-god.css"], "outOfDate":[]};
 </script>
   
-  <title>首頁</title>
+  <title>oh my god</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4167989958"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=206184375" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/oh-my-god.css?crc=3898968326" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu94"><!-- group -->
-    <div class="shadow rgba-background" id="u94"><!-- simple frame --></div>
-    <div class="clearfix" id="u119-4"><!-- content -->
-     <p>hello! welcom!</p>
-    </div>
-   </div>
-   <div class="clearfix grpelem" id="ppu108"><!-- column -->
-    <div class="clearfix colelem" id="pu108"><!-- group -->
-     <div class="museBGSize clearfix grpelem" id="u108"><!-- group -->
-      <div class="rounded-corners clearfix grpelem" id="u122"><!-- group -->
-       <a class="nonblock nontext clearfix grpelem" id="u125-4" href="animation.html" target="_blank"><!-- content --><p>click!!</p></a>
+   <div class="clearfix grpelem" id="pu431"><!-- group -->
+    <a class="nonblock nontext museBGSize grpelem" id="u431" href="https://www.instagram.com/w._.stone/" target="_blank"><!-- simple frame --></a>
+    <div class="SlideShowWidget clearfix grpelem" id="slideshowu499"><!-- none box -->
+     <div class="popup_anchor" id="u517popup">
+      <div class="SlideShowContentPanel clearfix" id="u517"><!-- stack box -->
+       <div class="SSSlide clip_frame grpelem" id="u518"><!-- image -->
+        <img class="block ImageInclude" id="u518_img" data-src="images/jin%20bd-crop-u518.jpg?crc=4149973519" data-hidpi-src="images/jin%20bd-crop-u518_2x.jpg?crc=4282303754" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+       </div>
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u522"><!-- image -->
+        <img class="ImageInclude position_content" id="u522_img" data-src="images/jk%20bd.jpg?crc=3811917111" data-hidpi-src="images/jk%20bd_2x.jpg?crc=22721209" src="images/blank.gif?crc=4208392903" alt="" data-width="492" data-height="360"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u520"><!-- image -->
+        <img class="block ImageInclude" id="u520_img" data-src="images/jk%20jk-crop-u520.jpg?crc=4026455180" data-hidpi-src="images/jk%20jk-crop-u520_2x.jpg?crc=38622482" src="images/blank.gif?crc=4208392903" alt="" data-width="480" data-height="360"/>
+       </div>
       </div>
      </div>
-     <div class="clearfix grpelem" id="u128-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=0.2924,M21=-0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-86" data-mu-ie-matrix-dy="3"><!-- content -->
-      <p><span>awesome</span></p>
+     <div class="popup_anchor" id="u524-4popup">
+      <div class="SSNextButton clearfix" id="u524-4"><!-- content -->
+       <p>&gt;</p>
+      </div>
      </div>
-    </div>
-    <a class="nonblock nontext museBGSize colelem" id="u586" href="https://youtu.be/DoHO0gu1xck" target="_blank"><!-- simple frame --></a>
-    <div class="clearfix colelem" id="pu385"><!-- group -->
-     <div class="clip_frame grpelem" id="u385"><!-- image -->
-      <img class="block" id="u385_img" src="images/%e4%b8%89%e8%a6%96.jpg?crc=95675551" data-hidpi-src="images/%e4%b8%89%e8%a6%96_2x.jpg?crc=3781428283" alt="" width="684" height="435"/>
-     </div>
-     <a class="nonblock nontext grpelem" id="u395" href="oh-my-god.html"><!-- simple frame --></a>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="2029" data-content-above-spacer="2028" data-content-below-spacer="125"></div>
-   <a class="anchor_item grpelem" id="hehe"></a>
+   <div class="museBGSize grpelem" id="u583"><!-- content --></div>
+   <div class="verticalspacer" data-offset-top="549" data-content-above-spacer="549" data-content-below-spacer="61"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%202.png?crc=426106178" alt=""/>
@@ -66,14 +64,14 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#slideshowu499', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'vertical',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:2000,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu499 */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u108').registerBackgroundPositionScrollEffect([{"speed":[0,0.1],"in":[-Infinity,0]},{"speed":[0,0.1],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
