--- a/index.html
+++ b/index.html
@@ -10,50 +10,64 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <title>首頁</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4167989958"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=206184375" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=3973185881"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3897434814" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu94"><!-- group -->
-    <div class="shadow rgba-background" id="u94"><!-- simple frame --></div>
-    <div class="clearfix" id="u119-4"><!-- content -->
-     <p>hello! welcom!</p>
-    </div>
+   <div class="browser_width" id="u447-bw">
+    <div class="rgba-background" id="u447"><!-- simple frame --></div>
    </div>
-   <div class="clearfix grpelem" id="ppu108"><!-- column -->
-    <div class="clearfix colelem" id="pu108"><!-- group -->
-     <div class="museBGSize clearfix grpelem" id="u108"><!-- group -->
-      <div class="rounded-corners clearfix grpelem" id="u122"><!-- group -->
-       <a class="nonblock nontext clearfix grpelem" id="u125-4" href="animation.html" target="_blank"><!-- content --><p>click!!</p></a>
+   <div class="clearfix grpelem" id="ppu448-7"><!-- column -->
+    <div class="clearfix colelem" id="pu448-7"><!-- group -->
+     <img class="grpelem" id="u448-7" alt="木石 woodiestone" width="127" height="35" src="images/u448-7.png?crc=3771967102" data-hidpi-src="images/u448-7_2x.png?crc=234275046"/><!-- rasterized frame -->
+     <a class="nonblock nontext clip_frame grpelem" id="u461" href="https://www.facebook.com/bai.zuigao/" target="_blank"><!-- image --><img class="block" id="u461_img" src="images/fb.png?crc=34795282" data-hidpi-src="images/fb_2x.png?crc=3788688044" alt="" width="31" height="35"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u463" href="https://www.instagram.com/w._.stone/" target="_blank"><!-- image --><img class="block" id="u463_img" src="images/ig.png?crc=197799432" data-hidpi-src="images/ig_2x.png?crc=4242854763" alt="" width="33" height="33"/></a>
+    </div>
+    <div class="browser_width colelem" id="u898-bw">
+     <div id="u898"><!-- column -->
+      <div class="clearfix" id="u898_align_to_page">
+       <div class="clearfix colelem" id="pu326"><!-- group -->
+        <div class="museBGSize grpelem" id="u326"><!-- simple frame --></div>
+        <a class="nonblock nontext museBGSize grpelem" id="u285" href="commission.html"><!-- simple frame --></a>
+       </div>
+       <div class="SlideShowWidget clearfix HeroFillFrame colelem" id="slideshowu811"><!-- none box -->
+        <div class="popup_anchor" id="u821popup">
+         <div class="SlideShowContentPanel clearfix" id="u821"><!-- stack box -->
+          <div class="SSSlide clip_frame grpelem" id="u822"><!-- image -->
+           <img class="ImageInclude" id="u822_img" data-src="images/cactus.jpg?crc=491424337" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
+          </div>
+          <div class="SSSlide invi clip_frame grpelem" id="u824"><!-- image -->
+           <img class="ImageInclude" id="u824_img" data-src="images/road.jpg?crc=180693847" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
+          </div>
+          <div class="SSSlide invi clip_frame grpelem" id="u826"><!-- image -->
+           <img class="ImageInclude" id="u826_img" data-src="images/trees.jpg?crc=4071309946" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
+          </div>
+         </div>
+        </div>
+       </div>
       </div>
      </div>
-     <div class="clearfix grpelem" id="u128-5" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=0.2924,M21=-0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-86" data-mu-ie-matrix-dy="3"><!-- content -->
-      <p><span>awesome</span></p>
-     </div>
-    </div>
-    <a class="nonblock nontext museBGSize colelem" id="u586" href="https://youtu.be/DoHO0gu1xck" target="_blank"><!-- simple frame --></a>
-    <div class="clearfix colelem" id="pu385"><!-- group -->
-     <div class="clip_frame grpelem" id="u385"><!-- image -->
-      <img class="block" id="u385_img" src="images/%e4%b8%89%e8%a6%96.jpg?crc=95675551" data-hidpi-src="images/%e4%b8%89%e8%a6%96_2x.jpg?crc=3781428283" alt="" width="684" height="435"/>
-     </div>
-     <a class="nonblock nontext grpelem" id="u395" href="oh-my-god.html"><!-- simple frame --></a>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="2029" data-content-above-spacer="2028" data-content-below-spacer="125"></div>
-   <a class="anchor_item grpelem" id="hehe"></a>
+   <div class="verticalspacer" data-offset-top="738" data-content-above-spacer="1265" data-content-below-spacer="527"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%202.png?crc=426106178" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%202_2x.png?crc=4073447268" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%203.png?crc=124237393" alt=""/>
-   <img class="preload" src="images/face-%e5%9c%96%e5%b1%a4%203_2x.png?crc=441505100" alt=""/>
+   <img class="preload" src="images/home-u326-r-fr.png?crc=369669368" alt=""/>
+   <img class="preload" src="images/home-u326-r-fr_2x.png?crc=134407970" alt=""/>
+   <img class="preload" src="images/home-u326-m-fr.png?crc=4001269312" alt=""/>
+   <img class="preload" src="images/home-u326-m-fr_2x.png?crc=3758240669" alt=""/>
+   <img class="preload" src="images/home-u285-r-fr.png?crc=3806393210" alt=""/>
+   <img class="preload" src="images/home-u285-r-fr_2x.png?crc=528280012" alt=""/>
+   <img class="preload" src="images/home-u285-m-fr.png?crc=4163997383" alt=""/>
+   <img class="preload" src="images/home-u285-m-fr_2x.png?crc=90251029" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -66,14 +80,18 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#slideshowu811', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'horizontal',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullWidth',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu811 */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u108').registerBackgroundPositionScrollEffect([{"speed":[0,0.1],"in":[-Infinity,0]},{"speed":[0,0.1],"in":[0,Infinity]}]);/* scroll effect */
+$('#u326').registerBackgroundPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,-30]},{"speed":[0,1],"in":[-30,Infinity]}]);/* scroll effect */
+$('#u285').registerBackgroundPositionScrollEffect([{"speed":[0,4.1],"in":[-Infinity,-30]},{"speed":[0,1],"in":[-30,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
