--- a/commission.html
+++ b/commission.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
-  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=293245199" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=366788723" id="pagesheet"/>
    </head>
  <body>
 
@@ -34,42 +34,57 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u898-bw">
      <div id="u898"><!-- column -->
       <div class="clearfix" id="u898_align_to_page">
-       <div class="position_content" id="u898_position_content">
-        <div class="clearfix colelem" id="pu1409"><!-- group -->
-         <a class="nonblock nontext museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
-         <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
-        </div>
-        <img class="colelem" id="u453-49" alt="♡委託♡ （請詳讀注意事項） 非商業委託流程： ♡ 私訊討論報價 ➡ 草稿(可免費修一次) ➡ 付訂金 ➡ 完稿小圖預覽 ➡ 付款 ➡ 雲端給圖/寄信箱 注意事項： ♡ 請用FB/ IG聯絡討論 ♡ 每張圖片都還可以點進去看細項跟更多範例圖ξ( ✿＞◡❛) ♡ 皆為非商業用途，公開或使用圖時請標註我！ ♡ 接原創/二創/夢向/色圖/BG/BL/GL，不接獸人/人外 ♡ 所有項目皆會按複雜程度調價 ♡ 完成圖可能會公佈在個人繪帳 尺寸： ♡ 大部分為2000*2000 300dpi（有不一樣的會再討論！） ♡ 7-14個工作天 付款方式： ♡ 無褶匯款/ATM轉帳（手續費自付）/ 蝦皮 / 超商代碼 聯絡方式： ♡ FB ♡ IG " width="384" height="446" src="images/u453-49.png?crc=4020284924" data-hidpi-src="images/u453-49_2x.png?crc=3859149640"/><!-- rasterized frame -->
-        <div class="clearfix colelem" id="pslideshowu352"><!-- group -->
-         <div class="SlideShowWidget clearfix grpelem" id="slideshowu352"><!-- none box -->
-          <div class="popup_anchor" id="u362popup">
-           <div class="SlideShowContentPanel clearfix" id="u362"><!-- stack box -->
-            <div class="SSSlide clip_frame grpelem" id="u363"><!-- image -->
-             <img class="block ImageInclude" id="u363_img" data-src="images/7cd375_6ac28c143be64c34975398552231e5fa~mv2.jpg?crc=4164153567" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem" id="u1136"><!-- image -->
-             <img class="block ImageInclude" id="u1136_img" data-src="images/7cd375_3ae91453b22f4cca87f1ec57035e8925~mv2.jpg?crc=4034308210" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem" id="u1156"><!-- image -->
-             <img class="block ImageInclude" id="u1156_img" data-src="images/7cd375_5c0cad4f1f2b454eab530ed4efc4438f~mv2.jpg?crc=421916817" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem" id="u1176"><!-- image -->
-             <img class="block ImageInclude" id="u1176_img" data-src="images/7cd375_7d505d56b9fb4870a3e1a210705324c9~mv2.jpg?crc=3924156976" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem" id="u1196"><!-- image -->
-             <img class="block ImageInclude" id="u1196_img" data-src="images/7cd375_ded9a73bc43f42b39db6b12a606a3ae7~mv2.jpg?crc=250229064" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-            </div>
+       <div class="clearfix colelem" id="pu1409"><!-- group -->
+        <a class="nonblock nontext museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
+        <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
+       </div>
+       <img class="colelem" id="u453-49" alt="♡委託♡ （請詳讀注意事項） 非商業委託流程： ♡ 私訊討論報價 ➡ 草稿(可免費修一次) ➡ 付訂金 ➡ 完稿小圖預覽 ➡ 付款 ➡ 雲端給圖/寄信箱 注意事項： ♡ 請用FB/ IG聯絡討論 ♡ 每張圖片都還可以點進去看細項跟更多範例圖ξ( ✿＞◡❛) ♡ 皆為非商業用途，公開或使用圖時請標註我！ ♡ 接原創/二創/夢向/色圖/BG/BL/GL，不接獸人/人外 ♡ 所有項目皆會按複雜程度調價 ♡ 完成圖可能會公佈在個人繪帳 尺寸： ♡ 大部分為2000*2000 300dpi（有不一樣的會再討論！） ♡ 7-14個工作天 付款方式： ♡ 無褶匯款/ATM轉帳（手續費自付）/ 蝦皮 / 超商代碼 聯絡方式： ♡ FB ♡ IG " width="384" height="446" src="images/u453-49.png?crc=4020284924" data-hidpi-src="images/u453-49_2x.png?crc=3859149640"/><!-- rasterized frame -->
+       <a class="anchor_item colelem" id="yeji"></a>
+       <div class="clearfix colelem" id="pslideshowu3190"><!-- group -->
+        <div class="SlideShowWidget clearfix grpelem" id="slideshowu3190"><!-- none box -->
+         <div class="popup_anchor" id="u3200popup">
+          <div class="SlideShowContentPanel clearfix" id="u3200"><!-- stack box -->
+           <div class="SSSlide clip_frame clearfix grpelem" id="u3201"><!-- image -->
+            <img class="ImageInclude position_content" id="u3201_img" data-src="images/7cd375_3ae91453b22f4cca87f1ec57035e8925~mv2497x497.jpg?crc=4031791249" data-hidpi-src="images/7cd375_3ae91453b22f4cca87f1ec57035e8925~mv2497x497_2x.jpg?crc=3839310665" src="images/blank.gif?crc=4208392903" alt="" data-width="497" data-height="497"/>
+           </div>
+           <div class="SSSlide invi clip_frame clearfix grpelem" id="u3325"><!-- image -->
+            <img class="ImageInclude position_content" id="u3325_img" data-src="images/7cd375_5c0cad4f1f2b454eab530ed4efc4438f~mv2497x497.jpg?crc=425811742" data-hidpi-src="images/7cd375_5c0cad4f1f2b454eab530ed4efc4438f~mv2497x497_2x.jpg?crc=3940300141" src="images/blank.gif?crc=4208392903" alt="" data-width="497" data-height="497"/>
+           </div>
+           <div class="SSSlide invi clip_frame clearfix grpelem" id="u3351"><!-- image -->
+            <img class="ImageInclude position_content" id="u3351_img" data-src="images/7cd375_6ac28c143be64c34975398552231e5fa~mv2497x497.jpg?crc=3782120656" data-hidpi-src="images/7cd375_6ac28c143be64c34975398552231e5fa~mv2497x497_2x.jpg?crc=526834881" src="images/blank.gif?crc=4208392903" alt="" data-width="497" data-height="497"/>
+           </div>
+           <div class="SSSlide invi clip_frame clearfix grpelem" id="u3377"><!-- image -->
+            <img class="ImageInclude position_content" id="u3377_img" data-src="images/7cd375_7d505d56b9fb4870a3e1a210705324c9~mv2497x497.jpg?crc=4141415576" data-hidpi-src="images/7cd375_7d505d56b9fb4870a3e1a210705324c9~mv2497x497_2x.jpg?crc=3779489948" src="images/blank.gif?crc=4208392903" alt="" data-width="497" data-height="497"/>
+           </div>
+           <div class="SSSlide invi clip_frame clearfix grpelem" id="u3403"><!-- image -->
+            <img class="ImageInclude position_content" id="u3403_img" data-src="images/7cd375_ded9a73bc43f42b39db6b12a606a3ae7~mv2.jpg?crc=186701214" data-hidpi-src="images/7cd375_ded9a73bc43f42b39db6b12a606a3ae7~mv2_2x.jpg?crc=4017472419" src="images/blank.gif?crc=4208392903" alt="" data-width="497" data-height="497"/>
            </div>
           </div>
          </div>
-         <img class="grpelem" id="u1316-14" alt="半身頭貼 NT.500 (加手＋NT.100) ♡ 可上單色背景色！" width="313" height="235" src="images/u1316-14.png?crc=4040907380" data-hidpi-src="images/u1316-14_2x.png?crc=4184408686"/><!-- rasterized frame -->
         </div>
+        <img class="grpelem" id="u1316-14" alt="半身頭貼 NT.400 (加手＋NT.100) ♡ 可上單色背景色！" width="120" height="163" src="images/u1316-14.png?crc=142638182" data-hidpi-src="images/u1316-14_2x.png?crc=4205455975"/><!-- rasterized frame -->
+       </div>
+       <a class="anchor_item colelem" id="girl"></a>
+       <div class="clearfix colelem" id="pslideshowu2691"><!-- group -->
+        <div class="SlideShowWidget clearfix grpelem" id="slideshowu2691"><!-- none box -->
+         <div class="popup_anchor" id="u2701popup">
+          <div class="SlideShowContentPanel clearfix" id="u2701"><!-- stack box -->
+           <div class="SSSlide clip_frame clearfix grpelem" id="u2702"><!-- image -->
+            <img class="ImageInclude position_content" id="u2702_img" data-src="images/7cd375_3ff9979d87884fb294917807909ff4c4~mv2.jpg?crc=239056812" data-hidpi-src="images/7cd375_3ff9979d87884fb294917807909ff4c4~mv2_2x.jpg?crc=334071665" src="images/blank.gif?crc=4208392903" alt="" data-width="499" data-height="499"/>
+           </div>
+           <div class="SSSlide invi clip_frame clearfix grpelem" id="u2805"><!-- image -->
+            <img class="ImageInclude position_content" id="u2805_img" data-src="images/7cd375_7d69679b2de44422bf117fb11bc51360~mv2499x499.jpg?crc=337385055" data-hidpi-src="images/7cd375_7d69679b2de44422bf117fb11bc51360~mv2499x499_2x.jpg?crc=125378846" src="images/blank.gif?crc=4208392903" alt="" data-width="499" data-height="499"/>
+           </div>
+          </div>
+         </div>
+        </div>
+        <img class="grpelem" id="u3429-11" alt="半身頭貼 NT.300 ♡ 可上單色背景色！" width="120" height="163" src="images/u3429-11.png?crc=4224687245" data-hidpi-src="images/u3429-11_2x.png?crc=3946356835"/><!-- rasterized frame -->
        </div>
       </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1306" data-content-above-spacer="1265" data-content-below-spacer="61"></div>
+   <div class="verticalspacer" data-offset-top="1888" data-content-above-spacer="1996" data-content-below-spacer="163"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
@@ -100,7 +115,8 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#slideshowu352', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:2000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu352 */
+Muse.Utils.initWidget('#slideshowu3190', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu3190 */
+Muse.Utils.initWidget('#slideshowu2691', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu2691 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
