--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <title>首頁</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=42365959" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=189352720" id="pagesheet"/>
    </head>
  <body>
 
@@ -32,26 +32,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clip_frame grpelem" id="u463" href="https://www.instagram.com/w._.stone/" target="_blank"><!-- image --><img class="block" id="u463_img" src="images/ig.png?crc=197799432" data-hidpi-src="images/ig_2x.png?crc=4242854763" alt="" width="33" height="33"/></a>
     </div>
     <div class="browser_width colelem" id="u898-bw">
-     <div id="u898"><!-- column -->
+     <div id="u898"><!-- group -->
       <div class="clearfix" id="u898_align_to_page">
-       <div class="clearfix colelem" id="pu1409"><!-- group -->
-        <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
-        <a class="nonblock nontext museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
+       <div class="clearfix grpelem" id="pu1409"><!-- column -->
+        <a class="nonblock nontext MuseLinkActive museBGSize colelem" id="u1409" href="index.html"><!-- simple frame --></a>
+        <a class="nonblock nontext museBGSize colelem" id="u3618" href="commission.html#yeji"><!-- simple frame --></a>
+        <img class="colelem" id="u3660-4" alt="半身頭貼" width="210" height="40" src="images/u3660-4.png?crc=4222070344" data-hidpi-src="images/u3660-4_2x.png?crc=62843734"/><!-- rasterized frame -->
+        <div class="colelem" id="u3627"><!-- simple frame --></div>
+        <div class="colelem" id="u3633"><!-- simple frame --></div>
+        <div class="colelem" id="u3639"><!-- simple frame --></div>
        </div>
-       <div class="SlideShowWidget clearfix HeroFitContent colelem" id="slideshowu811"><!-- none box -->
-        <div class="popup_anchor" id="u821popup">
-         <div class="SlideShowContentPanel clearfix" id="u821"><!-- stack box -->
-          <div class="SSSlide clip_frame grpelem" id="u822"><!-- image -->
-           <img class="ImageInclude" id="u822_img" data-src="images/%e5%80%8b%e5%b1%95%e4%b8%bb%e8%a6%96%e8%a6%ba1.jpg?crc=4275477829" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="475"/>
-          </div>
-         </div>
-        </div>
+       <div class="clearfix grpelem" id="pu1384"><!-- column -->
+        <a class="nonblock nontext museBGSize colelem" id="u1384" href="commission.html"><!-- simple frame --></a>
+        <a class="nonblock nontext museBGSize colelem" id="u3621" href="commission.html#girl"><!-- simple frame --></a>
+        <img class="colelem" id="u3663-4" alt="半身頭貼" width="210" height="40" src="images/u3663-4.png?crc=4222070344" data-hidpi-src="images/u3663-4_2x.png?crc=62843734"/><!-- rasterized frame -->
+        <div class="colelem" id="u3624"><!-- simple frame --></div>
+        <div class="colelem" id="u3630"><!-- simple frame --></div>
+        <div class="colelem" id="u3636"><!-- simple frame --></div>
        </div>
       </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="738" data-content-above-spacer="1265" data-content-below-spacer="527"></div>
+   <div class="verticalspacer" data-offset-top="1911" data-content-above-spacer="1996" data-content-below-spacer="85"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
@@ -74,7 +77,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
@@ -82,7 +85,6 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#slideshowu811', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'horizontal',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullWidth',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu811 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
