--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=189352720" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4283709206" id="pagesheet"/>
    </head>
  <body>
 
@@ -37,15 +37,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clearfix grpelem" id="pu1409"><!-- column -->
         <a class="nonblock nontext MuseLinkActive museBGSize colelem" id="u1409" href="index.html"><!-- simple frame --></a>
         <a class="nonblock nontext museBGSize colelem" id="u3618" href="commission.html#yeji"><!-- simple frame --></a>
-        <img class="colelem" id="u3660-4" alt="半身頭貼" width="210" height="40" src="images/u3660-4.png?crc=4222070344" data-hidpi-src="images/u3660-4_2x.png?crc=62843734"/><!-- rasterized frame -->
-        <div class="colelem" id="u3627"><!-- simple frame --></div>
+        <img class="colelem" id="u3660-4" alt="半身頭貼" width="210" height="40" src="images/u3660-4.png?crc=94764834" data-hidpi-src="images/u3660-4_2x.png?crc=3940419629"/><!-- rasterized frame -->
+        <a class="nonblock nontext museBGSize colelem" id="u3627" href="commission.html#two"><!-- simple frame --></a>
+        <img class="colelem" id="u4101-4" alt="全身雙人" width="210" height="40" src="images/u4101-4.png?crc=81423537" data-hidpi-src="images/u4101-4_2x.png?crc=3817876469"/><!-- rasterized frame -->
         <div class="colelem" id="u3633"><!-- simple frame --></div>
         <div class="colelem" id="u3639"><!-- simple frame --></div>
        </div>
        <div class="clearfix grpelem" id="pu1384"><!-- column -->
         <a class="nonblock nontext museBGSize colelem" id="u1384" href="commission.html"><!-- simple frame --></a>
         <a class="nonblock nontext museBGSize colelem" id="u3621" href="commission.html#girl"><!-- simple frame --></a>
-        <img class="colelem" id="u3663-4" alt="半身頭貼" width="210" height="40" src="images/u3663-4.png?crc=4222070344" data-hidpi-src="images/u3663-4_2x.png?crc=62843734"/><!-- rasterized frame -->
+        <img class="colelem" id="u3666-4" alt="半身頭貼" width="210" height="40" src="images/u3666-4.png?crc=94764834" data-hidpi-src="images/u3666-4_2x.png?crc=3940419629"/><!-- rasterized frame -->
         <div class="colelem" id="u3624"><!-- simple frame --></div>
         <div class="colelem" id="u3630"><!-- simple frame --></div>
         <div class="colelem" id="u3636"><!-- simple frame --></div>
@@ -54,7 +55,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1911" data-content-above-spacer="1996" data-content-below-spacer="85"></div>
+   <div class="verticalspacer" data-offset-top="1911" data-content-above-spacer="3619" data-content-below-spacer="1708"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
