--- a/commission.html
+++ b/commission.html
@@ -10,20 +10,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "commission.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "commission.css"], "outOfDate":[]};
 </script>
   
   <title>commission</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
-  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=366788723" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=4129040986" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
    <div class="browser_width" id="u447-bw">
-    <div class="rgba-background" id="u447"><!-- simple frame --></div>
+    <div id="u447"><!-- simple frame --></div>
    </div>
    <div class="clearfix grpelem" id="ppu448-7"><!-- column -->
     <div class="clearfix colelem" id="pu448-7"><!-- group -->
@@ -35,8 +35,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u898"><!-- column -->
       <div class="clearfix" id="u898_align_to_page">
        <div class="clearfix colelem" id="pu1409"><!-- group -->
-        <a class="nonblock nontext museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
-        <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
+        <a class="nonblock nontext grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
+        <a class="nonblock nontext MuseLinkActive grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
        </div>
        <img class="colelem" id="u453-49" alt="♡委託♡ （請詳讀注意事項） 非商業委託流程： ♡ 私訊討論報價 ➡ 草稿(可免費修一次) ➡ 付訂金 ➡ 完稿小圖預覽 ➡ 付款 ➡ 雲端給圖/寄信箱 注意事項： ♡ 請用FB/ IG聯絡討論 ♡ 每張圖片都還可以點進去看細項跟更多範例圖ξ( ✿＞◡❛) ♡ 皆為非商業用途，公開或使用圖時請標註我！ ♡ 接原創/二創/夢向/色圖/BG/BL/GL，不接獸人/人外 ♡ 所有項目皆會按複雜程度調價 ♡ 完成圖可能會公佈在個人繪帳 尺寸： ♡ 大部分為2000*2000 300dpi（有不一樣的會再討論！） ♡ 7-14個工作天 付款方式： ♡ 無褶匯款/ATM轉帳（手續費自付）/ 蝦皮 / 超商代碼 聯絡方式： ♡ FB ♡ IG " width="384" height="446" src="images/u453-49.png?crc=4020284924" data-hidpi-src="images/u453-49_2x.png?crc=3859149640"/><!-- rasterized frame -->
        <a class="anchor_item colelem" id="yeji"></a>
@@ -80,21 +80,33 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <img class="grpelem" id="u3429-11" alt="半身頭貼 NT.300 ♡ 可上單色背景色！" width="120" height="163" src="images/u3429-11.png?crc=4224687245" data-hidpi-src="images/u3429-11_2x.png?crc=3946356835"/><!-- rasterized frame -->
        </div>
+       <a class="anchor_item colelem" id="two"></a>
+       <div class="clearfix colelem" id="pslideshowu3907"><!-- group -->
+        <div class="SlideShowWidget clearfix grpelem" id="slideshowu3907"><!-- none box -->
+         <div class="popup_anchor" id="u3917popup">
+          <div class="SlideShowContentPanel clearfix" id="u3917"><!-- stack box -->
+           <div class="SSSlide clip_frame grpelem" id="u3918"><!-- image -->
+            <img class="block ImageInclude" id="u3918_img" data-src="images/7cd375_05001f2aec96421f84dff378710a0adc~mv2-crop-u3918.jpg?crc=4146429758" src="images/blank.gif?crc=4208392903" alt="" data-width="485" data-height="504"/>
+           </div>
+           <div class="SSSlide invi clip_frame grpelem" id="u4021"><!-- image -->
+            <img class="block ImageInclude" id="u4021_img" data-src="images/7cd375_dad0e9ce4aac41c9a4c024ca4642d69d~mv2.jpg?crc=196990802" src="images/blank.gif?crc=4208392903" alt="" data-width="501" data-height="504"/>
+           </div>
+           <div class="SSSlide invi clip_frame grpelem" id="u4048"><!-- image -->
+            <img class="block ImageInclude" id="u4048_img" data-src="images/7cd375_66a4c590047e4e1dbfaf92733abee19e~mv2.jpg?crc=4268113318" data-hidpi-src="images/7cd375_66a4c590047e4e1dbfaf92733abee19e~mv2_2x.jpg?crc=142009993" src="images/blank.gif?crc=4208392903" alt="" data-width="500" data-height="500"/>
+           </div>
+           <div class="SSSlide invi clip_frame grpelem" id="u4075"><!-- image -->
+            <img class="block ImageInclude" id="u4075_img" data-src="images/7cd375_9af267db6831461fba703df15a2e3f61~mv2.jpg?crc=4169962014" src="images/blank.gif?crc=4208392903" alt="" data-width="501" data-height="504"/>
+           </div>
+          </div>
+         </div>
+        </div>
+        <img class="grpelem" id="u3812-16" alt="雙人全身 全身簡單上色：900+ 雙人半身：1300+ 雙人全身：1500+ ♡ 依照複雜程度加價" width="138" height="163" src="images/u3812-16.png?crc=4186628588" data-hidpi-src="images/u3812-16_2x.png?crc=501928604"/><!-- rasterized frame -->
+       </div>
       </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1888" data-content-above-spacer="1996" data-content-below-spacer="163"></div>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
-   <img class="preload" src="images/home-home_2x2.png?crc=49740971" alt=""/>
-   <img class="preload" src="images/home-home3.png?crc=22780217" alt=""/>
-   <img class="preload" src="images/home-home_2x3.png?crc=334386822" alt=""/>
-   <img class="preload" src="images/home-commission2.png?crc=4248076307" alt=""/>
-   <img class="preload" src="images/home-commission_2x2.png?crc=32319927" alt=""/>
-   <img class="preload" src="images/home.png?crc=404926519" alt=""/>
-   <img class="preload" src="images/home_2x.png?crc=200644759" alt=""/>
+   <div class="verticalspacer" data-offset-top="2480" data-content-above-spacer="3619" data-content-below-spacer="1139"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -107,7 +119,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
@@ -117,6 +129,7 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('#slideshowu3190', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu3190 */
 Muse.Utils.initWidget('#slideshowu2691', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu2691 */
+Muse.Utils.initWidget('#slideshowu3907', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu3907 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
